merge: Merged two local directories
- Contents of local dev repo added to local run directory
- Consolidates all files into one git repo that can be updated
- Added .gitignore entries to avoid repo pollution

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ bin/
 .AppleDouble
 .LSOverride
 
+# Windows
+desktop.ini
+Thumbs.db
+
 # Thumbnails
 ._*
 
@@ -52,3 +56,8 @@ replay_pid*
 # Third party JAR files from Ghidra
 lib/*.jar
 
+# Installation files
+*.zip
+
+# Miscellaneous
+etc/
