--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Google GSON for JSON parsing -->
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10.1</version>
+    </dependency>
   </dependencies>
 
   <build>
